--- a/JakartaLearningProject/View/Base.lproj/Main.storyboard
+++ b/JakartaLearningProject/View/Base.lproj/Main.storyboard
@@ -59,7 +59,7 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="769"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="peta-1" translatesAutoresizingMaskIntoConstraints="NO" id="umf-Dj-Xva">
-                                        <rect key="frame" x="0.0" y="0.0" width="414.00000000000023" height="769.00000000000023"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="769"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Discover" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k8Q-iP-dae">
                                         <rect key="frame" x="15" y="44" width="128" height="41"/>
@@ -115,56 +115,125 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="92F-ge-r9z">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1TJ-P8-Fk8">
-                                        <rect key="frame" x="0.0" y="133" width="414" height="208"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1TJ-P8-Fk8">
+                                        <rect key="frame" x="0.0" y="113" width="414" height="208"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="1TJ-P8-Fk8" secondAttribute="height" multiplier="207:104" id="6Ce-Vu-Ug4"/>
+                                        </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gy2-sE-oxf">
-                                        <rect key="frame" x="32" y="336" width="350" height="66"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gy2-sE-oxf">
+                                        <rect key="frame" x="20" y="331" width="374" height="31.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Summary" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fn4-HE-Bjy">
+                                        <rect key="frame" x="35" y="408.5" width="344" height="20.5"/>
+                                        <accessibility key="accessibilityConfiguration">
+                                            <accessibilityTraits key="traits" none="YES"/>
+                                        </accessibility>
+                                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Summary" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QLh-zX-0Ox">
+                                        <rect key="frame" x="13" y="375.5" width="81" height="23"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                        <color key="textColor" red="0.99763482810000004" green="0.75061158090000002" blue="0.31111527820000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What to do" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3J6-cq-VVb">
+                                        <rect key="frame" x="13" y="442" width="94" height="23"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                        <color key="textColor" red="0.99763482810000004" green="0.75061158090000002" blue="0.31111527820000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OuA-j8-DBR">
+                                        <rect key="frame" x="13" y="440" width="0.0" height="0.0"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                        <color key="textColor" red="0.99763482810000004" green="0.75061158090000002" blue="0.31111527820000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What user can do" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dWo-jt-GMM">
+                                        <rect key="frame" x="35" y="475" width="344" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fn4-HE-Bjy">
-                                        <rect key="frame" x="32" y="410" width="350" height="276"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Information" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IDX-Bl-Obg">
+                                        <rect key="frame" x="13" y="508.5" width="97" height="23"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                        <color key="textColor" red="0.99763482810000004" green="0.75061158090000002" blue="0.31111527820000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Information" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aif-vh-DpD">
+                                        <rect key="frame" x="35" y="541.5" width="344" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <constraints>
+                                    <constraint firstItem="Gy2-sE-oxf" firstAttribute="top" secondItem="1TJ-P8-Fk8" secondAttribute="bottom" constant="10" id="1Ol-Vq-WhB"/>
+                                    <constraint firstItem="fn4-HE-Bjy" firstAttribute="top" secondItem="QLh-zX-0Ox" secondAttribute="bottom" constant="10" id="1eb-sw-Yqr"/>
+                                    <constraint firstItem="dWo-jt-GMM" firstAttribute="leading" secondItem="92F-ge-r9z" secondAttribute="leading" constant="35" id="4tD-TZ-eVJ"/>
+                                    <constraint firstItem="1TJ-P8-Fk8" firstAttribute="top" secondItem="92F-ge-r9z" secondAttribute="top" constant="113" id="761-1K-I9c"/>
+                                    <constraint firstAttribute="trailing" secondItem="dWo-jt-GMM" secondAttribute="trailing" constant="35" id="AGj-Ux-9dI"/>
+                                    <constraint firstItem="IDX-Bl-Obg" firstAttribute="leading" secondItem="92F-ge-r9z" secondAttribute="leading" constant="13" id="As2-Ra-cY9"/>
+                                    <constraint firstAttribute="trailing" secondItem="1TJ-P8-Fk8" secondAttribute="trailing" id="DJc-Bm-KpR"/>
+                                    <constraint firstItem="dWo-jt-GMM" firstAttribute="top" secondItem="3J6-cq-VVb" secondAttribute="bottom" constant="10" id="Lm4-zS-ape"/>
+                                    <constraint firstItem="3J6-cq-VVb" firstAttribute="top" secondItem="fn4-HE-Bjy" secondAttribute="bottom" constant="13" id="MZC-1z-hSn"/>
+                                    <constraint firstItem="IDX-Bl-Obg" firstAttribute="top" secondItem="dWo-jt-GMM" secondAttribute="bottom" constant="13" id="Ocl-rC-fl4"/>
+                                    <constraint firstItem="3J6-cq-VVb" firstAttribute="leading" secondItem="92F-ge-r9z" secondAttribute="leading" constant="13" id="QNy-ve-yML"/>
+                                    <constraint firstItem="aif-vh-DpD" firstAttribute="leading" secondItem="92F-ge-r9z" secondAttribute="leading" constant="35" id="Qvh-fX-qXy"/>
+                                    <constraint firstItem="fn4-HE-Bjy" firstAttribute="leading" secondItem="92F-ge-r9z" secondAttribute="leading" constant="35" id="WUy-Ko-Fvc"/>
+                                    <constraint firstAttribute="trailing" secondItem="fn4-HE-Bjy" secondAttribute="trailing" constant="35" id="XOW-a6-bbT"/>
+                                    <constraint firstItem="aif-vh-DpD" firstAttribute="top" secondItem="IDX-Bl-Obg" secondAttribute="bottom" constant="10" id="c8h-o5-6dy"/>
+                                    <constraint firstAttribute="trailing" secondItem="aif-vh-DpD" secondAttribute="trailing" constant="35" id="h7B-BK-k8G"/>
+                                    <constraint firstItem="1TJ-P8-Fk8" firstAttribute="leading" secondItem="92F-ge-r9z" secondAttribute="leading" id="jOC-YU-3rb"/>
                                     <constraint firstAttribute="height" constant="1000" id="oMW-fK-9Nq"/>
+                                    <constraint firstItem="QLh-zX-0Ox" firstAttribute="leading" secondItem="92F-ge-r9z" secondAttribute="leading" constant="13" id="ofP-s0-EQR"/>
+                                    <constraint firstItem="Gy2-sE-oxf" firstAttribute="leading" secondItem="92F-ge-r9z" secondAttribute="leading" constant="20" id="rR3-gA-YGj"/>
+                                    <constraint firstAttribute="trailing" secondItem="Gy2-sE-oxf" secondAttribute="trailing" constant="20" id="tjl-t7-5vo"/>
+                                    <constraint firstItem="QLh-zX-0Ox" firstAttribute="top" secondItem="Gy2-sE-oxf" secondAttribute="bottom" constant="13" id="ucS-hD-GTh"/>
+                                    <constraint firstItem="IDX-Bl-Obg" firstAttribute="leading" secondItem="92F-ge-r9z" secondAttribute="leading" constant="13" id="wMg-rF-0M6"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="92F-ge-r9z" firstAttribute="trailing" secondItem="QWV-aQ-ebS" secondAttribute="trailing" id="2J2-m1-zNt"/>
                             <constraint firstItem="92F-ge-r9z" firstAttribute="leading" secondItem="I78-7b-mP9" secondAttribute="leading" id="2ia-ty-9f4"/>
                             <constraint firstItem="bPw-og-bzk" firstAttribute="top" secondItem="QWV-aQ-ebS" secondAttribute="top" constant="44" id="3Dw-Mj-oWq"/>
+                            <constraint firstItem="92F-ge-r9z" firstAttribute="top" secondItem="I78-7b-mP9" secondAttribute="top" id="5bX-5h-jwc"/>
+                            <constraint firstItem="92F-ge-r9z" firstAttribute="leading" secondItem="QWV-aQ-ebS" secondAttribute="leading" id="8Pv-um-pG9"/>
+                            <constraint firstAttribute="bottom" secondItem="92F-ge-r9z" secondAttribute="bottom" id="C4A-MI-zu6"/>
                             <constraint firstAttribute="bottom" secondItem="92F-ge-r9z" secondAttribute="bottom" id="FpG-bF-cJB"/>
                             <constraint firstAttribute="bottom" secondItem="bPw-og-bzk" secondAttribute="bottom" id="QEl-0p-Jnf"/>
                             <constraint firstItem="bPw-og-bzk" firstAttribute="leading" secondItem="QWV-aQ-ebS" secondAttribute="leading" id="USE-gm-nNK"/>
                             <constraint firstItem="92F-ge-r9z" firstAttribute="top" secondItem="I78-7b-mP9" secondAttribute="top" id="Ztb-jH-HgR"/>
                             <constraint firstAttribute="trailing" secondItem="92F-ge-r9z" secondAttribute="trailing" id="a5Y-Mi-CaK"/>
                             <constraint firstItem="bPw-og-bzk" firstAttribute="trailing" secondItem="QWV-aQ-ebS" secondAttribute="trailing" id="ugI-HL-tQg"/>
+                            <constraint firstItem="bPw-og-bzk" firstAttribute="top" secondItem="QWV-aQ-ebS" secondAttribute="top" constant="44" id="zbc-ip-iPD"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="QWV-aQ-ebS"/>
                     </view>
                     <navigationItem key="navigationItem" id="UNM-Ta-cWl"/>
                     <size key="freeformSize" width="414" height="1000"/>
                     <connections>
-                        <outlet property="descriptionLabel" destination="fn4-HE-Bjy" id="sDn-ni-yvP"/>
                         <outlet property="image" destination="1TJ-P8-Fk8" id="WlG-cY-mJN"/>
+                        <outlet property="informationLabel" destination="aif-vh-DpD" id="29o-i6-7yc"/>
                         <outlet property="scrollView" destination="bPw-og-bzk" id="Hg4-6K-yaw"/>
+                        <outlet property="summaryLabel" destination="fn4-HE-Bjy" id="sDn-ni-yvP"/>
                         <outlet property="titleLabel" destination="Gy2-sE-oxf" id="B0Z-R7-l3C"/>
+                        <outlet property="todoLabel" destination="dWo-jt-GMM" id="Ajw-UX-7nA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NY6-p9-PC4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3743" y="-633"/>
+            <point key="canvasLocation" x="3742.0289855072465" y="-633.48214285714278"/>
         </scene>
         <!--Achievement-->
         <scene sceneID="1XK-nS-IcO">
@@ -310,7 +379,7 @@
     <resources>
         <image name="explored" width="24" height="26"/>
         <image name="map" width="26" height="25"/>
-        <image name="peta-1" width="784" height="784"/>
+        <image name="peta-1" width="842" height="1191"/>
         <image name="scan" width="26" height="26"/>
     </resources>
     <inferredMetricsTieBreakers>
