--- a/JakartaLearningProject/Base.lproj/Main.storyboard
+++ b/JakartaLearningProject/Base.lproj/Main.storyboard
@@ -61,13 +61,6 @@
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="peta-1" translatesAutoresizingMaskIntoConstraints="NO" id="umf-Dj-Xva">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="725"/>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Discover" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k8Q-iP-dae">
-                                        <rect key="frame" x="15" y="44" width="139" height="41"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
-                                        <color key="textColor" red="0.99763482810000004" green="0.75061158090000002" blue="0.31111527820000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="umf-Dj-Xva" secondAttribute="bottom" id="CQM-FT-neP"/>
@@ -342,7 +335,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="PFX-5S-duh" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Explored" image="explored" id="G45-2Z-KRw"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" hidden="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="l44-Us-zmv">
+                    <navigationBar key="navigationBar" hidden="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="blackTranslucent" id="l44-Us-zmv">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -362,7 +355,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="U9P-sW-xJR" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Scan" image="scan" id="IYC-Eh-JTN"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" hidden="YES" alpha="0.0" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3KY-im-7DU">
+                    <navigationBar key="navigationBar" hidden="YES" alpha="0.0" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="blackTranslucent" id="3KY-im-7DU">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -448,6 +441,13 @@
                                                         </collectionViewCell>
                                                     </cells>
                                                 </collectionView>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uJ0-71-ZcY">
+                                                    <rect key="frame" x="20" y="11" width="374" height="53"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <connections>
+                                                        <action selector="kotaTuaButton:" destination="DfK-dT-fMl" eventType="touchUpInside" id="PlY-MX-NQQ"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </tableViewCellContentView>
@@ -533,7 +533,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="ow2-pW-gKU"/>
                     <connections>
-                        <segue destination="rn5-bT-KNt" kind="show" identifier="testSegue" id="JHZ-W2-gd1"/>
+                        <outlet property="tableView" destination="AxL-LM-qmG" id="wTg-3k-nNh"/>
+                        <segue destination="rn5-bT-KNt" kind="show" identifier="discoverMapSegue" id="JHZ-W2-gd1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gtk-s8-Uby" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -546,7 +547,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" hidesBottomBarWhenPushed="YES" id="IAc-6g-SFq" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Discover" image="map" id="2r1-F9-t7d"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" hidden="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Fit-mf-aTx">
+                    <navigationBar key="navigationBar" alpha="0.0" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="blackTranslucent" id="Fit-mf-aTx">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -570,4 +571,5 @@
     <inferredMetricsTieBreakers>
         <segue reference="x4k-V3-irV"/>
     </inferredMetricsTieBreakers>
+    <color key="tintColor" red="0.99763482810000004" green="0.75061158090000002" blue="0.31111527820000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
 </document>
